Minor changes in configuration spec of module type

--- a/module_type.json.sample
+++ b/module_type.json.sample
@@ -32,7 +32,7 @@
     {
       "key": "custom_AGGREGATE",
       "type": "boolean",
-      "label": "Entities Limit",
+      "label": "Aggregate",
       "tooltip": "Switches on the `Aggregated Mode`",
       "required": false
     }
